backpack alignment fixed

--- a/css/all-ie-only.css
+++ b/css/all-ie-only.css
@@ -101,8 +101,8 @@
         /*border: 1px solid #000;*/
         padding: 3%;
         position: absolute;
-        top: 6.5%;
-        left:7%;
+        top: 3.5%;
+        left:9%;
         border-radius: 10px;
     }
 
